--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="jumbotron text-center">
     <h1 class="display-3">Cat Collector</h1>
     <p class="lead">A purr-fect game with endless paw-sibilities. Play right meow!</p>
-    <cite title="Source Title">(Win by matching your total score to the target score, you lose if you go over. The cats below won't tell you how much they're worth until you pet them. And worse, their values change every round. Just try it out, I swear I'm not kitten. Good luck, my fur-end.)</cite>
+    <cite title="Source Title">(Win by matching your total score to the target score, you lose if you go over. The cats below won't tell you how much they're worth until you pet them. <br> And worse, their values change every round. Just try it out, I swear I'm not kitten. Good luck, my fur-end.)</cite>
     <br><br>
     <div class="row">
         <div class="col-md-4">
